force-app/main/default/objects/leaseworks__Insurance_Coverage_Details__c/leaseworks__Insurance_Coverage_Details__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Insurance Coverage Details</label>
    <nameField>
        <label>Insurance Certificate Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Coverage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>