force-app/main/default/objects/leaseworks__Insurance_Coverage_Details__c/fields/leaseworks__Certificate_Sub_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Certificate_Sub_Limit__c</fullName>
    <label>Certificate Sub Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>