force-app/main/default/objects/leaseworks__Insurance_Coverage_Details__c/fields/leaseworks__Insurance_Certificate_IR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurance_Certificate_IR__c</fullName>
    <label>Insurance Certificate</label>
    <referenceTo>leaseworks__Insurance_Certificate_IR__c</referenceTo>
    <relationshipLabel>Insurance Coverage Details</relationshipLabel>
    <relationshipName>Insurance_Coverage_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>