force-app/main/default/objects/leaseworks__Insurance_Coverage_Details__c/fields/leaseworks__Insurer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurer__c</fullName>
    <label>Insurer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>