force-app/main/default/objects/leaseworks__Insurance_Coverage_Details__c/fields/leaseworks__Reinsurer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reinsurer__c</fullName>
    <label>Reinsurer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>